pk: change strategy for updating the installed package state

Use the information offered by the transaction instead of clearing the
package and resolving the packages again. PackageKit apt backend is
really slow and issues happen eventually.

BUG: 401961
BUG: 401971